# pixy-video-capture

./: .gitignore  CMakeLists.txt  PixyCamera.cpp  PixyCamera.h  README.md  Render.cpp  Render.h  colors.h  demo  main.cpp
scripts/: crop_video.py  preprocessing.py  test.py  visualize_curve.py
train/: depoly.prototxt  solver.prototxt  test_data.txt  train.sh  train_data.txt  train_val.prototxt
train/cpm-net/: train.sh
train/cpm-net/model/: deploy.prototxt  solver.prototxt  train_val.prototxt
train/deeppose/: train.sh
train/deeppose/model/: deploy.prototxt  solver.prototxt  train_val.prototxt
train/heatmap-net/: train.sh
train/heatmap-net/model/: deploy.prototxt  solver.prototxt  train_val.prototxt
train/predict/: predict  predict.py
train/simple-net/: train.sh
train/simple-net/model/: solver.prototxt  test_data.txt  train_val.prototxt
train/vgg-net/: train.sh
train/vgg-net/model/: deploy.prototxt  solver.prototxt  train_val.prototxt
